--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Assignment 01</title>
-     <link rel="stylesheet" href="styles/style.css">
-</head>
-<body>
-     
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Assignment 01</title>
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body>
+    <header class="banner-container">
+      <div class="banner-content">
+        <div class="banner-image">
+          <img src="./assets/Group.png" alt="" />
+        </div>
+        <h1 class="bannner-description">
+          "In the near future, I hope to become a <br />
+          Developer."
+        </h1>
+        <p>
+          I aspire to become a Developer, diving deep into coding and software
+          development to create <br />
+          innovative solutions and impactful applications.
+        </p>
+        <button class="btn-1">Contact with me</button>
+      </div>
+    </header>
+    <main>
+      <section class="second-section-container">
+        <div class="second-section-content">
+          <div class="second-section-title">
+            <h2>Why Web Development??</h2>
+            <p>
+              Web development is a dynamic field that combines creativity and
+              technical skills, allowing me to build interactive and
+              user-friendly websites and applications.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
