--- a/index.html
+++ b/index.html
@@ -35,6 +35,49 @@
               user-friendly websites and applications.
             </p>
           </div>
+          <div class="second-section-items">
+            <div class="second-sec-item-1">
+              <div class="item-1-description">
+                <h3>I will Do Coding and Change The World</h3>
+                <p>
+                  Through coding, I aim to innovate and make a positive impact
+                  on the world.
+                </p>
+                <button class="btn-2">learn more</button>
+              </div>
+              <div class="item-1-image">
+                <img src="./assets/Layer-1.png" alt="" />
+              </div>
+            </div>
+          </div>
+          <div class="second-section-items">
+               <div class="second-sec-item-2">
+                    <div class="item-2-image">
+                         <img src="./assets/Group-3.png" alt="">
+                    </div>
+                    <div class="item-2-description">
+                         <h3>I will Do Coding and Change The World</h3>
+                         <p>Through coding, I aim to innovate and make a positive impact on the world.</p>
+                         <button class="btn-2">learn more</button>
+                    </div>
+                    
+               </div>   
+          </div>
+          <div class="second-section-items">
+            <div class="second-sec-item-1">
+              <div class="item-1-description">
+                <h3>I will Do Coding and Change The World</h3>
+                <p>
+                  Through coding, I aim to innovate and make a positive impact
+                  on the world.
+                </p>
+                <button class="btn-2">learn more</button>
+              </div>
+              <div class="item-1-image">
+                <img src="./assets/Group-4.png" alt="" />
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
