added third section and CSS styles

--- a/index.html
+++ b/index.html
@@ -51,17 +51,19 @@
             </div>
           </div>
           <div class="second-section-items">
-               <div class="second-sec-item-2">
-                    <div class="item-2-image">
-                         <img src="./assets/Group-3.png" alt="">
-                    </div>
-                    <div class="item-2-description">
-                         <h3>I will Do Coding and Change The World</h3>
-                         <p>Through coding, I aim to innovate and make a positive impact on the world.</p>
-                         <button class="btn-2">learn more</button>
-                    </div>
-                    
-               </div>   
+            <div class="second-sec-item-2">
+              <div class="item-2-image">
+                <img src="./assets/Group-3.png" alt="" />
+              </div>
+              <div class="item-2-description">
+                <h3>I will Do Coding and Change The World</h3>
+                <p>
+                  Through coding, I aim to innovate and make a positive impact
+                  on the world.
+                </p>
+                <button class="btn-2">learn more</button>
+              </div>
+            </div>
           </div>
           <div class="second-section-items">
             <div class="second-sec-item-1">
@@ -79,6 +81,32 @@
             </div>
           </div>
         </div>
+      </section>
+      <section class="third-section-container">
+        <div class="third-section-title">
+          <h2>My Inspiration</h2>
+          <p>
+            My inspiration for learning web development comes from a desire to
+            create impactful, user-friendly websites that can reach and benefit
+            a global audience. The endless possibilities for innovation and
+            creativity in this field excite me.
+          </p>
+        </div>
+        <div class="video-content">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/YGflHj1SjA4?si=Ypy8h1jomsCCzfcI"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </section>
+      <section class="">
+
       </section>
     </main>
     <footer></footer>
