added fourth section and CSS style

--- a/index.html
+++ b/index.html
@@ -105,8 +105,51 @@
           ></iframe>
         </div>
       </section>
-      <section class="">
-
+      <section class="fourth-section-container">
+        <div class="fourth-section-title">
+          <h2>My Current Target</h2>
+          <p>
+            My current target is mastering HTML, CSS, and JavaScript to build
+            robust and visually appealing web applications. These foundational
+            technologies will enable me to create dynamic and responsive
+            websites.
+          </p>
+        </div>
+        <div class="fourth-section-content">
+          <div class="fourth-section-item-1">
+            <div class="fourth-item-container">
+              <img src="./assets/html.png" alt="" />
+              <h3>HTML</h3>
+              <p>
+                HTML (HyperText Markup Language) is the standard language used
+                to create and structure content on the web.
+              </p>
+              <p class="learn-more">Learn More</p>
+            </div>
+          </div>
+          <div class="fourth-section-item-2">
+            <div class="fourth-item-container">
+              <img src="./assets/css.png" alt="" />
+              <h3>CSS</h3>
+              <p>
+                CSS (Cascading Style Sheets) is used to style and layout web
+                pages, controlling the presentation and design of HTML elements.
+              </p>
+              <p class="learn-more">Learn More</p>
+            </div>
+          </div>
+          <div class="fourth-section-item-3">
+            <div class="fourth-item-container">
+              <img src="./assets/js.png" alt="" />
+              <h3>JavaScript</h3>
+              <p>
+                JavaScript is a versatile programming language that enables
+                interactive and dynamic content on web pages.
+              </p>
+              <p class="learn-more">Learn More</p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <footer></footer>
