added fifth section and CSS styles

--- a/index.html
+++ b/index.html
@@ -151,6 +151,16 @@
           </div>
         </div>
       </section>
+      <section class="fifth-section-container">
+          <div class="fifth-section-content">
+               <h2>I need Support</h2>
+               <p>I need support to navigate challenges and achieve my goals in web development.</p>
+               <form>
+                    <textarea id="message" name="message" placeholder="suggest me any feedback for me"></textarea>
+                    <button>Submit</button>
+               </form>
+          </div>
+      </section>
     </main>
     <footer></footer>
   </body>
