--- a/index.html
+++ b/index.html
@@ -152,16 +152,33 @@
         </div>
       </section>
       <section class="fifth-section-container">
-          <div class="fifth-section-content">
-               <h2>I need Support</h2>
-               <p>I need support to navigate challenges and achieve my goals in web development.</p>
-               <form>
-                    <textarea id="message" name="message" placeholder="suggest me any feedback for me"></textarea>
-                    <button>Submit</button>
-               </form>
-          </div>
+        <div class="fifth-section-content">
+          <h2>I need Support</h2>
+          <p>
+            I need support to navigate challenges and achieve my goals in web
+            development.
+          </p>
+          <form>
+            <textarea
+              id="message"
+              name="message"
+              placeholder="suggest me any feedback for me"
+            ></textarea>
+            <button>Submit</button>
+          </form>
+        </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="bottom-container">
+        <p>An Open Commitment by Md. Fariz Uddin Rabbu</p>
+        <div class="bottom-icon">
+          <img src="/assets/facebook.png" alt="" /><img
+          src="/assets/linkedin-icon 1.png"
+          alt=""
+        /><img src="/assets/github.png" alt="" />
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
