added challenge part of scroll effect of contact me

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           development to create <br />
           innovative solutions and impactful applications.
         </p>
-        <button class="btn-1">Contact with me</button>
+        <a href="#contact"><button class="btn-1">Contact with me</button></a>
       </div>
     </header>
     <main>
@@ -169,7 +169,7 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer id="contact">
       <div class="bottom-container">
         <p>An Open Commitment by Md. Fariz Uddin Rabbu</p>
         <div class="bottom-icon">
